[project]
name = "ComfyUI-Minitools"
description = "ComfyUI Mini Toolkit – Helps reduce node redundancy."
version = "1.2.7"
license = {file = "LICENSE"}

[project.urls]
Repository = "https://github.com/lepiai/ComfyUI-Minitools"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "gary"
DisplayName = "ComfyUI-Minitools"
Icon = ""
SupportedComfyUIVersion = ">=0.2.0"
